# swpt_stomp

./: Dockerfile  README.md  client.py  development.env  docker-compose.yml  main.py  pyproject.toml  pytest.ini  swpt-certificates.rst  swpt-stomp.rst
.github/workflows/: release_image.yml  run_tests.yml
docker/: entrypoint.sh  rmq_connect.py
swpt_stomp/: __init__.py  aio_protocols.py  client.py  common.py  configure_queue.py  consumer.py  drainer.py  loggers.py  logging.py  peer_data.py  process_messages.py  rmq.py  server.py  smp_schemas.py  stomp_parser.py
test_data/AA/: server.crt  server.key
test_data/AA/db/: index  index.old  root-ca.csr  serial
test_data/AA/peers/060791aeca7637fa3357dfc0299fb4c5/: nodetype.txt
test_data/AA/peers/09cab36b6079e09c32a9dfd60446c469/: peercert.crt  root-ca.crt  sub-ca.crt
test_data/AA/peers/5921983fe0e6eb987aeedca54ad3c708/: nodetype.txt  peercert.crt
test_data/AA/private/: root-ca.key
test_data/CA/: root-ca.conf  server.crt  server.key
test_data/CA/db/: index  index.old  serial  serial.old
test_data/CA/nodeinfo/: stomp.toml
test_data/CA/peers/1234abcd/: nodetype.txt
test_data/CA/peers/deac00ed/: peercert.crt  root-ca.crt  sub-ca.crt
test_data/DA/: root-ca.conf  root-ca.crt  server.crt  server.key
test_data/DA/db/: index  nodeid  root-ca.csr  serial  serial.old
test_data/DA/nodeinfo/: stomp.toml
test_data/DA/private/: root-ca.key
tests/: conftest.py  test_aio_protocols.py  test_cli.py  test_client_and_server.py  test_common.py  test_consumer.py  test_drainer.py  test_peer_data.py  test_process_messages.py  test_rmq.py  test_smp_schemas.py  test_stomp_parser.py
tests/test_data/AA/: root-ca.conf  root-ca.conf.template  root-ca.crt  server.crt  server.csr  server.key  sign-peercert
tests/test_data/AA/db/: index  index.old  nodetype  serial  serial.old
tests/test_data/CA/: server.csr  server.key
tests/test_data/CA/certs/: 829735ACEFACF31A37096F10CA25DBAA.pem
tests/test_data/CA/db/: index.old  nodetype  root-ca.csr  serial  (+1 more)
tests/test_data/DA/: init-ca  server.csr  server.key  sign-servercert
tests/test_peer_data/: create-infobundle  generate-serverkey
tests/test_peer_data/CA/: generate-masterkey  register-peer
tests/test_peer_data/certs/: 829735ACEFACF31A37096F10CA25DBA8.pem
(+26 files in other folders)
