[tool.poetry]
name = "swpt-stomp"
version = "0.1.0"
description = "Client and server implementations of the STOMP protocol for Swaptacular"
authors = ["Evgeni Pandurski <epandurski@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "swpt_stomp"}]

[tool.poetry.dependencies]
python = "^3.9"
python-json-logger = "^2.0.7"
aio-pika = "^9.0.7"
uvloop = "^0.17.0"
tomli = "^2.0.1"
marshmallow = "^3.19.0"
click = "^8.1.3"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"

[tool.poetry.group.dev.dependencies]
python-lsp-server = {extras = ["all"], version = "^1.7.1"}
pytest-cov = "^4.0.0"
pylsp-mypy = "^0.6.6"
black = "^23.7.0"

[tool.poetry.scripts]
swpt-client = "swpt_stomp.client:client"
swpt-server = "swpt_stomp.server:server"
swpt-drainer = "swpt_stomp.drainer:drainer"
configure-queue = "swpt_stomp.configure_queue:configure_queue"

[tool.pylsp-mypy]
enabled = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
